# kuvaka-lead-scorer

./: .dockerignore  .gitignore  Dockerfile  README.md  leads.csv  main.py  pyproject.toml  startup.sh
alembic/: env.py
alembic/versions/: 759769bff0f2_create_initial_tables.py
app/api/: routes.py
app/api/endpoints/: leads.py
app/core/: config.py
app/db/: base.py  models.py
app/schemas/: lead.py  offer.py
app/services/: scoring_service.py
tests/: test_scoring_service.py
