[tool.poetry]
name = "kuvaka"
version = "0.1.0"
description = "Kuvaka Assignment"
authors = ["Satyam Sharma <satyam17102003@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = {extras = ["all"], version = ">=0.118.0,<0.119.0"}
sqlalchemy = ">=2.0.43,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
google-generativeai = ">=0.8.5,<0.9.0"
python-dotenv = ">=1.1.1,<2.0.0"
alembic = ">=1.16.5,<2.0.0"
greenlet = ">=3.2.4,<4.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."